fix input overflow issues

--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ body {
     margin: 0;
     min-height: 100vh;
     display: flex;
-    /* justify-content: center; */
     align-items: center;
     flex-direction: column;
+    background-color: whitesmoke;
 }
 
 /* this is the base ui */
@@ -40,13 +40,16 @@ body {
 }
 
 #input {
+    width: 360px;
+    overflow: hidden;
     text-align: left;
-    margin-top: 20px;
+    margin-top: 18px;
 }
 
 #output {
+    width: 360px;
     text-align: right;
-    margin-bottom: 20px;
+    margin-bottom: 18px;
 }
 
 .keypad {
@@ -76,4 +79,12 @@ button {
 
 #equal {
     width: 172px;
+}
+
+.footer {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-top: 180px;
 }
